chore(deps): Upgraded Spring Boot, updated related dependencies and adjusted their usage in DTOs and tests